# GrinningSoul

./: CMakeLists.txt  LICENSE.txt  buildSwiftTrampolineTests.sh  buildSwiftdb.py  buildTrampolineTests.sh  cleanFuncdb.py  convertAll.sh  convertOne.sh  dumpGsInit.py  dylibify.py  funcdb  funcdb2  generateFuncdb.py  init.h  libarmruntime.dylib  libc--.1.dylib  libc--abi.1.dylib  libemuruntime.dylib  wrap.py  wrapTemplate.mm
ArmRuntime/: CMakeLists.txt  Collections.mm  NSLog.mm  StringFormat.mm  asl.mm  generateReplacements.py  memory.cpp  printf.h  printf.mm  scanf.cpp  swiftStdlib.cpp
Converter/: CMakeLists.txt  macho.cpp  macho.h  main.cpp  simenv.cpp  simenv.h
Debugger/: .lldbinit  commands.py  debug.sh
HeaderParser/: CMakeLists.txt  declparse.cpp
Runtime/: CMakeLists.txt  cpu.cpp  cpu.h  exceptionHandlers.h  exceptionHandlers.mm  gs.h  jmpWrappers.cpp  jmpWrappers.h  keychainTester.mm  kickoff.cpp  logging.h  logging.mm  objcWrappers.h  objcWrappers.mm  objcppWrappers.h  objcppWrappers.mm  record.h  replacements.generated.h  repr.h  swiftDemangler.cpp  swiftDemangler.h  trampoliner.cpp  trampoliner.h  wrappers.cpp  wrappers.h
SwiftTrampolineTests.app/: Info.plist  SwiftTrampolineTests  SwiftTrampolineTests.dylib  embedded.mobileprovision  libarmruntime.dylib  libc--.1.dylib
SwiftTrampolineTests.app/Base.lproj/LaunchScreen.storyboardc/: 01J-lp-oVM-view-Ze5-6b-2t3.nib  UIViewController-01J-lp-oVM.nib
SwiftTrampolineTests.app/Base.lproj/Main.storyboardc/: BYZ-38-t0r-view-8bC-Xf-vdC.nib  UIViewController-BYZ-38-t0r.nib
SwiftTrampolineTests.app/Frameworks/NativeSide.framework/: Info.plist  NativeSide
SwiftTrampolineTests.app/Frameworks/NativeSide.framework/_CodeSignature/: CodeResources
SwiftTrampolineTests.app/_CodeSignature/: CodeResources
TrampolineTests.app/: GSWrapper  Info.plist  TrampolineTests  TrampolineTests.dylib  embedded.mobileprovision  libc--abi.1.dylib
TrampolineTests.app/Base.lproj/LaunchScreen.storyboardc/01J-lp-oVM-view-Ze5-6b-2t3.nib/: objects-13.0+.nib  runtime.nib
TrampolineTests.app/Base.lproj/LaunchScreen.storyboardc/UIViewController-01J-lp-oVM.nib/: objects-13.0+.nib  runtime.nib
TrampolineTests.app/Base.lproj/Main.storyboardc/BYZ-38-t0r-view-8bC-Xf-vdC.nib/: objects-13.0+.nib  runtime.nib
TrampolineTests.app/Base.lproj/Main.storyboardc/UIViewController-BYZ-38-t0r.nib/: objects-13.0+.nib  runtime.nib
TrampolineTests.app/Frameworks/NativeSide.framework/: Info.plist  NativeSide
TrampolineTests.app/Frameworks/NativeSide.framework/_CodeSignature/: CodeResources
TrampolineTests.app/_CodeSignature/: CodeResources
